Fixed z-index on home footer

--- a/dev/components/_navigation.scss
+++ b/dev/components/_navigation.scss
@@ -73,3 +73,7 @@
 .footer__subpage {
     background-color: rgba(0, 0, 0, .125);
 }
+
+footer {
+    z-index: 20;
+}
